fix(IS-075): null-safe claims in IotSimPrincipal + wire jwks-uri override
Two blocking issues from Claude review round 3:

1. IotSimPrincipal constructor used Map.copyOf() which throws NPE on null claim
   values. Replaced with Collections.unmodifiableMap(new HashMap<>(claims)) so
   IdPs that emit null-valued optional claims (e.g. "email": null) are handled
   correctly by both the converter and the principal.

2. oidcProperties.jwksUri() was documented as the JWKS endpoint override but
   SecurityConfig never read it. resolveDecoder() now checks iotsim.oidc.jwks-uri
   first and builds a NimbusJwtDecoder from that URI when set, falling back to
   the Spring Boot auto-configured decoder — covers deployments where OIDC
   discovery is unavailable (e.g. Cognito without discovery).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>